--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/recharts": "^1.8.23",
     "axios": "^0.27.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.13",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
